--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.16.3"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.7"
