--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "multer": "^1.3.1"
   }
 }
