--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "basic-auth": "^2.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "dotenv": "^6.0.0",
