--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "basic-auth": "^2.0.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^5.2.7",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0"
   }
 }
