--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "mongoose": "^5.2.7",
     "multer": "^1.3.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.3"
   }
 }
